--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta>
 	<title>loading...</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-	<script src="jquery.address-1.3.2/jquery.address-1.3.2.js" type="text/javascript"></script>
-	<script src="show.js" type="text/javascript"></script>
+	<script src="http://dl.dropbox.com/u/1205299/present.me/jquery.address-1.3.2/jquery.address-1.3.2.min.js" type="text/javascript"></script>
+	<script src="http://dl.dropbox.com/u/1205299/present.me/show.min.js" type="text/javascript"></script>
 
 </head>
 
